--- a/components/src/styles/index.css
+++ b/components/src/styles/index.css
@@ -3,9 +3,10 @@
 }
 
 body {
-  margin: 24px;
+  margin: 0 60px;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  max-width: 960px;
+  min-width: 360px;
+  max-width: 1440px;
+  background: #000;
 }
